--- a/package.json
+++ b/package.json
@@ -1,8 +1,42 @@
 {
-  "devDependencies": {
-    "preact": "^10.5.13",
-    "sha.js": "^2.4.11",
-    "typescript": "^4.2.4",
-    "typescript-eslint": "*"
-  }
+	"private": true,
+	"name": "passphrase-hasher",
+	"version": "0.0.1",
+	"license": "BSD 3-Clause",
+	"scripts": {
+		"build": "preact build",
+		"serve": "sirv build --port 8080 --cors --single",
+		"dev": "preact watch",
+		"lint": "eslint src",
+		"test": "jest"
+	},
+	"compilerOptions": {
+		"jsx": "react-jsx",
+		"jsxImportSource": "preact"
+	},
+	"eslintConfig": {
+		"extends": "preact",
+		"ignorePatterns": [
+			"build/"
+		]
+	},
+	"devDependencies": {
+		"@types/crypto-js": "^4.0.0",
+		"crypto-js": "^4.0.0",
+		"enzyme": "^3.10.0",
+		"enzyme-adapter-preact-pure": "^2.0.0",
+		"eslint-config-preact": "^1.1.0",
+		"jest": "^24.9.0",
+		"jest-preset-preact": "^1.0.0",
+		"preact": "^10.5.13",
+		"preact-cli": "^3.0.0",
+		"sirv-cli": "1.0.3",
+		"typescript": "^4.2.4",
+		"typescript-eslint": "*"
+	},
+	"dependencies": {
+		"preact": "^10.3.2",
+		"preact-render-to-string": "^5.1.4",
+		"preact-router": "^3.2.1"
+	}
 }
