--- a/.github/workflows/learn-github-actions.yml
+++ b/.github/workflows/learn-github-actions.yml
@@ -4,7 +4,17 @@ jobs:
   vague-test-action:
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v2
-      - uses: actions/setup-node@v1
-      - run: npm install
-      - run: npm run test
+      - name: checkout repo 
+        uses: actions/checkout@v2
+      - name: npm ci, build, test 
+        uses: actions/setup-node@v1
+        run: |
+          npm ci
+          npm run build --if-present
+          npm test
+      - name: Archive coverage
+        uses: actions/upload-artifact@v2
+        with:
+          name: code-coverage-report
+          path: coverage/**
+          retention-days: 14
