--- a/.github/workflows/learn-github-actions.yml
+++ b/.github/workflows/learn-github-actions.yml
@@ -6,9 +6,9 @@ jobs:
     steps:
       - name: checkout repo 
         uses: actions/checkout@v2
-      - name: npm ci, build, test
+      - name: npm install, build, test
         run: |
-          npm ci
+          npm install
           npm run build --if-present
           npm test
       - name: Archive coverage
