--- a/package.json
+++ b/package.json
@@ -28,21 +28,22 @@
 		"crypto-js": "^4.0.0",
 		"enzyme": "^3.10.0",
 		"enzyme-adapter-preact-pure": "^2.0.0",
+		"eslint": "*",
 		"eslint-config-preact": "^1.1.0",
-		"jest": "^24.9.0",
-		"jest-html-reporter": "^3.3.0",
-		"jest-preset-preact": "^1.0.0",
-		"preact": "^10.5.13",
+		"jest": "*",
+		"jest-html-reporter": "*",
+		"jest-preset-preact": "*",
+		"preact": "*",
 		"preact-cli": "^3.0.0",
 		"sirv-cli": "1.0.3",
-		"ts-jest": "^26.5.5",
+		"ts-jest": "*",
 		"typescript": "^4.2.4",
-		"typescript-eslint": "*"
+		"yarn": "^1.22.10"
 	},
 	"dependencies": {
-		"preact": "^10.3.2",
+		"preact": "*",
 		"preact-render-to-string": "^5.1.4",
 		"preact-router": "^3.2.1",
-		"yarn": "^1.22.10"
+		"ts-lib": "^0.0.5"
 	}
 }
