--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
 		"build": "preact build",
 		"serve": "sirv build --port 8080 --cors --single",
 		"dev": "preact watch",
-		"lint": "eslint src",
+		"lint": "eslint ./src",
 		"test": "jest"
 	},
 	"compilerOptions": {
@@ -17,33 +17,32 @@
 	"eslintConfig": {
 		"extends": "preact",
 		"ignorePatterns": [
-			"build/"
+			"build/",
+			".dist"
 		]
 	},
 	"devDependencies": {
 		"@types/chai": "^4.2.16",
 		"@types/crypto-js": "^4.0.0",
-		"@types/jest": "^24.0.0",
+		"@types/jest": "^24.9.0",
 		"chai": "^4.2.0",
-		"crypto-js": "^4.0.0",
 		"enzyme": "^3.10.0",
 		"enzyme-adapter-preact-pure": "^2.0.0",
-		"eslint": "*",
+		"eslint": "^6.0.1",
 		"eslint-config-preact": "^1.1.0",
-		"jest": "*",
-		"jest-html-reporter": "*",
-		"jest-preset-preact": "*",
-		"preact": "*",
+		"jest": "^24.9.0",
+		"jest-preset-preact": "^1.0.0",
 		"preact-cli": "^3.0.0",
 		"sirv-cli": "1.0.3",
-		"ts-jest": "*",
+		"ts-jest": "^24.3.0",
 		"typescript": "^4.2.4",
 		"yarn": "^1.22.10"
 	},
 	"dependencies": {
-		"preact": "*",
+		"@types/enzyme": "^3.10.8",
+		"crypto-js": "^4.0.0",
+		"preact": "^10.3.2",
 		"preact-render-to-string": "^5.1.4",
-		"preact-router": "^3.2.1",
-		"ts-lib": "^0.0.5"
+		"preact-router": "^3.2.1"
 	}
 }
