--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,9 +1,15 @@
 { 
-	"files": ["em_ty.ts"],
   "compilerOptions": {
-    "target": "es6",
+		"esModuleInterop": true,
     "module": "commonjs",
+		"target": "es6",
+		"jsx":"react",
     "outDir": "out",
+		"importHelpers": true,
 		"sourceMap": true
-  }
+  },
+	"exclude": [
+		"./node_moduels/**/*",
+		"./rollups/**/*"
+	]
 }
