--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
 		"eslint-config-preact": "^1.1.0",
 		"jest": "^24.9.0",
 		"jest-preset-preact": "^1.0.0",
+		"jest-html-reporter": "*",
 		"preact-cli": "^3.0.0",
 		"sirv-cli": "1.0.3",
 		"ts-jest": "^24.3.0",
