--- a/package.json
+++ b/package.json
@@ -31,8 +31,8 @@
 		"eslint": "^6.0.1",
 		"eslint-config-preact": "^1.1.0",
 		"jest": "^24.9.0",
-		"jest-preset-preact": "^1.0.0",
 		"jest-html-reporter": "*",
+		"jest-preset-preact": "^1.0.0",
 		"preact-cli": "^3.0.0",
 		"sirv-cli": "1.0.3",
 		"ts-jest": "^24.3.0",
@@ -40,6 +40,7 @@
 		"yarn": "^1.22.10"
 	},
 	"dependencies": {
+		"@testing-library/preact": "^2.0.1",
 		"@types/enzyme": "^3.10.8",
 		"crypto-js": "^4.0.0",
 		"preact": "^10.3.2",
