--- a/tsconfig.json
+++ b/tsconfig.json
@@ -3,7 +3,8 @@
 		"esModuleInterop": true,
     "module": "commonjs",
 		"target": "es6",
-		"jsx":"react",
+		"jsx": "react-jsx",
+    "jsxImportSource": "preact",
     "outDir": "out",
 		"importHelpers": true,
 		"sourceMap": true
